--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.22.2",
     "axios": "^0.27.2",
+    "formik": "^2.2.9",
     "history": "^5.3.0",
     "hoist-non-react-statics": "^3.3.2",
     "i18next": "^21.8.14",
@@ -25,6 +26,7 @@
     "redux": "^4.2.0",
     "redux-saga": "^1.1.3",
     "reselect": "^4.1.6",
+    "sass": "^1.54.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
